--- a/Admin-Dashboard/src/components/Cards/Cards.css
+++ b/Admin-Dashboard/src/components/Cards/Cards.css
@@ -1,9 +1,9 @@
-.Cards{
-    display: flex;
-    gap: 10px;
+.Cards {
+  display: flex;
+  gap: 10px;
 }
 
-.parentContainer{
-    width: 100%;
-    
+.parentContainer {
+  width: 100%;
+  position: relative;
 }
