--- a/Admin-Dashboard/src/components/Cards/Card.css
+++ b/Admin-Dashboard/src/components/Cards/Card.css
@@ -8,10 +8,11 @@
   padding: 1rem;
   position: relative;
   cursor: pointer;
+  transition: all 500ms ease;
 }
 
 .CompactCard:hover {
-  box-shadow: none;
+  box-shadow: none !important;
 }
 
 .radialBar {
